Style fixes: fixed form and flash messages alignment

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -69,7 +69,7 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 	display: block;
 	font-size: 120%;
 	padding: 0.8em;
-	margin: 1em 0 1em 1em;
+	margin: 1em 0;
 	clear: both;
 	color: #fff;
 	border: 1px solid rgba(0, 0, 0, 0.5);
@@ -93,7 +93,7 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 	display: block;
 	font-size: 120%;
 	padding: 0.8em;
-	margin: 1em 0 1em 1em;
+	margin: 1em 0;
 	clear: both;
 	color: #333;
 	border: 1px solid rgba(0, 0, 0, 0.5);
@@ -117,7 +117,7 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 	display: block;
 	font-size: 120%;
 	padding: 0.8em;
-	margin: 1em 0 1em 1em;
+	margin: 1em 0;
 	clear: both;
 	color: #fff;
 	border: 1px solid rgba(0, 0, 0, 0.5);
