--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -174,6 +174,7 @@ form div {
 	margin-bottom: 1em;
 	padding: .5em;
 	vertical-align: text-top;
+	margin-left:-1em;
 }
 form .input {
 	color: #444;
